2005-11-14  Aaron Bockover  <aaron@aaronbock.net>

	* src/LibraryTrackInfo.cs: Always use PathUtil.PathToFileUri()
	* data/glade/player.glade: Emit OnScaleTimeMoveSlider for MotionNotifyEvent
	* src/PlayerInterface.cs: Update the position label when the slider is 
	dragged, enables better seeking (Ruben Vermeersch)
	* src/TrackInfoHeader.cs: Don't escape entities twice
	* data/banshee.schemas.in: Added /apps/banshee/EnableFileSystemMonitoring;
	fixed typo
	* src/AudioCdCore.cs: Fixed typo
	* src/PlayerInterface.cs: Respect --play on new instance after the library
	has loaded 
	* src/PlayerInterface.cs:
	* src/PlaylistView.cs: call playlistModel.Advance() if nothing is loaded
	in the engine and playlistView.PlaySelected() fails (pressing "play" on 
	first start will play work) (Ruben Vermeersch)
	* src/LibraryTrackInfo.cs:
	* src/LibraryTransactions.cs:
	* src/FileSystemMonitor/FileSystemWatcherWatch.cs:
	* src/FileSystemMonitor/InotifyWatch.cs: change to use 
	PathUtil.FileUriStringToPath
	* src/Utilities.cs: Added Timer class from F-Spot; added 
	PathUtil.FileUriStringToPath to replace StringUtil path methods 

2005-11-14  James Willcox  <snorp@snorp.net>

	* src/PlaylistView.cs: only scroll to the playing song if it is
	outside the current viewable area.

2005-11-13  Aaron Bockover  <aaron@aaronbock.net>

	* src/AboutBox.cs: Added Doğacan Güney
	* src/GConfKeys.cs: Added key EnableFileSystemMonitoring; reformatted code
	* src/LibraryTransactions.cs (FileLoadTransaction): Load multiple paths
	at once without making them raw (Doğacan Güney)
	* src/Library.cs (Library.Remove): Overloaded to allow removal based on
	a System.Uri (Doğacan Güney)
	* src/Core.cs: Instantiate and dispose of FileSystemMonitor.Watcher only
	if enabled in GConf
	* libbanshee/Makefile.am: Added inotify glue
	* libbanshee/inotify-glue.c:
	* libbanshee/inotify.h:
	* libbanshee/inotify-syscalls.h: inotify system-level glue
	* src/FileSystemMonitor/*.cs: Added File System monitoring patch by 